client/src/App.css
/* ITALIC, LOGO */
@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,700&display=swap");
/* REGULAR, NAV LINKS */
@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@600&family=Mukta:wght@500&display=swap");
/* SERIF FONT FOR BODY */
@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@600&family=Mukta:wght@500&family=Spectral&display=swap");

:root {
  --text: white;
  --logo-font: "Kanit", sans-serif;
  --link-font: "Mukta", sans-serif;
  --serif-font: "Spectral", serif;

  --soft-lightblue: #c8e4f9;
  --lightblue: #b0def4;
  --med-lightblue: #8097d1;
  --med-darkblue: #7079a0;
  --darkblue: #005178;
  --darkerblue: #00293c;
  --deep-darkblue: #474056;
  --chi-blue: #b5def2;

  --primary-lightpink: #ea8aba;
  --primary-darkpink: #a33f67;
  --primary-lightorange: #f3872f;
  --primary-darkorange: #f96700;

  --homepage-textshadow: 1px 1px 2px var(--med-lightblue);

  --btn-hover: 0.2s ease-in-out;
  --blue-gradient: linear-gradient(
    to right,
    var(--darkerblue),
    var(--darkblue)
  );
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: var(--text);
}

body {
  background: var(--darkerblue);
}

a {
  all: initial;
  /* all: unset; */
  cursor: pointer;
  text-decoration: none;
}

button {
  cursor: pointer;
}

/* HOMEPAGE  */

.homepage-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: linear-gradient(
    to top,
    var(--med-lightblue),
    var(--chi-blue) 20%
  );
  height: 100%;
  padding: 3rem 0;
}

.homepage-img {
  position: fixed;
  top: 21rem;
  left: 0;
  z-index: 2;
}

img {
  all: unset;
  max-height: 20vh;
}

.homepage-text-wrapper {
  position: relative;
  width: 80%;
  z-index: 3;
}

.homepage-bio-wrapper {
  margin-top: 23rem;
}

.homepage-header {
  text-shadow: var(--homepage-textshadow);
}

.homepage-header,
.homepage-bio-wrapper,
.homepage-welcome {
  font-family: var(--logo-font);
  font-size: 180%;
}

.homepage-header,
.homepage-secondary-header,
.homepage-bio {
  background: var(--blue-gradient);
  padding: 1rem 3rem;
  margin: 0 auto;
  border: 2px solid var(--text);
  border-radius: 10px;
  box-shadow: 2px 2px 3px var(--deep-darkblue);
  text-align: left;
}

.homepage-secondary-header {
  margin-top: 1rem;
  border-radius: 10px;
}

.homepage-bio {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background: none;
  border: none;
  margin: 1rem auto 0;
  padding: 0 0;
  box-shadow: none;
}

.bio-col-left,
.bio-col-right {
  /* font-family: var(--serif-font); */
  background: var(--blue-gradient);
  padding: 1rem 3rem;
  border: 2px solid var(--text);
}

.bio-col-left {
  width: 58%;
  margin-right: 2%;
  border-radius: 10px;
}

.bio-col-right {
  display: flex;
  flex-direction: column;
  width: 40%;
  border-radius: 10px;
}

.og-sweeper {
  display: block;
  width: 300px;
  height: 300px;
}

.get-started,
h4 {
  width: 80%;
  margin-top: 1rem;
}

.swept-header {
  font-style: italic;
}

.chicago-link {
  /* font-family: var(--link-font); */
  all: unset;
  text-decoration: underline;
  transition: 0.2s ease-in-out;
}

.homepage-signup {
  margin: 1rem 0 0;
  width: 50%;
  text-align: center;
  font-size: 70%;
}

.login-btn {
  margin: 0;
}

.donate-btn {
  text-align: center;
  width: 70%;
  padding: 0.2rem 0;
  margin: 1rem 0;
  font-family: var(--link-font);
}

.donate-btn > a {
  all: unset;
}

.chicago-link:hover {
  color: var(--soft-lightblue);
}

/* END HOMEPAGE  */

/* LOGIN / SIGNUP WRAPPER  */

.login-signup-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: linear-gradient(
    to top,
    var(--med-lightblue),
    var(--chi-blue) 20%
  );
  height: 85vh;
  padding: 8rem 0;
}

.login-signup-inner {
  display: flex;
  flex-direction: column;
  width: 40%;
  padding: 3rem;
  background: var(--blue-gradient);
  border: 2px solid var(--text);
  border-radius: 10px;
  box-shadow: 2px 2px 3px var(--deep-darkblue);
}

.login-signup-form-switcher {
  font-family: var(--link-font);
  font-style: italic;
  margin-left: 6px;
  transition: var(--btn-hover);
}

.login-signup-form-switcher:hover {
  color: var(--med-darkblue);
  text-decoration: underline;
}

/* END LOGIN / SIGNUP WRAPPER  */

/* LOGIN FORM  */

.login-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 5rem;
  background: linear-gradient(
    to top,
    var(--med-lightblue),
    var(--chi-blue) 20%
  );
  height: 100vh;
}

.login-form {
  display: flex;
  flex-direction: column;
}

.login-input {
  padding: 0.7rem 1rem;
  font-size: 120%;
  background: var(--darkblue);
  border: 2px solid white;
  border-radius: 10px;
  margin-bottom: 1.2rem;
}

.login-submit-btn {
  background: var(--primary-darkorange);
  text-align: left;
  font-weight: bold;
  transition: var(--btn-hover);
}

.login-submit-btn:disabled {
  background: var(--deep-darkblue);
}

.login-submit-btn:hover:enabled {
  background: var(--primary-lightorange);
}

/* END LOGIN FORM  */

/* PROFILE  */

.profile-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 5rem;
  background: linear-gradient(
    to top,
    var(--med-lightblue),
    var(--chi-blue) 20%
  );
  height: 85vh;
  font-family: var(--link-font);
  text-shadow: none;
}

.profile-welcome-header {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.profile-header {
  all: unset;
  font-family: var(--link-font);
  font-size: 200%;
  text-shadow: 3px 3px 2px var(--deep-darkblue);
}

.profile-username {
  margin-left: 10px;
  font-family: var(--logo-font);
  font-style: italic;
  font-size: 200%;
  text-shadow: 3px 3px 2px var(--deep-darkblue);
}

.profile-email {
  font-size: 120%;
}
/* ... */

